Footer Styles Done

--- a/styles/less/modules/header.less
+++ b/styles/less/modules/header.less
@@ -1,13 +1,11 @@
 .navbar{
-    padding: 15px;
     border: 1px solid @border-grey;
-    margin-bottom: 20px;
     .navbar-brand{
         height: auto;
     }
     button.close{
-        margin:30px 0;
-        padding:5px;
-        border: 1px solid @border-grey;
+        margin-top:22px;;
+        padding: 2px 6px;
+        border: 2px solid @black;
     }
 }
