html framework ready

--- a/styles/less/modules/search.less
+++ b/styles/less/modules/search.less
@@ -1,15 +1,21 @@
 main{
-   .right-inner-addon {
-        position: relative;
-        input {
-            padding-right: 30px;    
+    .form-inline{
+        .form-control {
+            width: 100%;
+            padding: 20px 40px 20px 15px;
         }
-        i{
-            position: absolute;
-            right: 0px;
-            padding: 10px 12px;
-            pointer-events: none;
-        } 
+       .right-inner-addon {
+            position: relative;
+            input {
+                padding-right: 30px;    
+            }
+            button{
+                position: absolute;
+                right: 0px;
+                padding: 11px 12px;
+                background-color: transparent;
+                border-width: 0;
+            } 
+        }
     }
-
 }
