--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -44,17 +44,22 @@ footer .nav-pills > li > a:focus {
     width: 96%;
   }
 }
-main .right-inner-addon {
+main .form-inline .form-control {
+  width: 100%;
+  padding: 20px 40px 20px 15px;
+}
+main .form-inline .right-inner-addon {
   position: relative;
 }
-main .right-inner-addon input {
+main .form-inline .right-inner-addon input {
   padding-right: 30px;
 }
-main .right-inner-addon i {
+main .form-inline .right-inner-addon button {
   position: absolute;
   right: 0px;
   padding: 10px 12px;
-  pointer-events: none;
+  background-color: transparent;
+  border-width: 0;
 }
 body {
   background-color: #fff;
