--- a/styles/less/modules/search.less
+++ b/styles/less/modules/search.less
@@ -18,4 +18,17 @@ main{
             } 
         }
     }
+    ul{
+        padding-left:0;
+        li{
+            list-style-type: none;
+            margin-top: 20px;
+            a{
+                text-decoration: underline;
+                &:hover,&:focus{
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
