All done ready to submit

--- a/styles/less/modules/footer.less
+++ b/styles/less/modules/footer.less
@@ -22,13 +22,16 @@ footer{
                 }
             }
         }
+        li:last-child{
+            border-right-width:0;   
+        }
 
     }
 }
 
 @media screen and (max-width: 1024px){
     .footer {
-        .nav-pills{
+        ul.nav-pills{
             float: left;
             margin: 0 auto;
             padding: 40px 2%;
