--- a/styles/less/modules/search.less
+++ b/styles/less/modules/search.less
@@ -31,4 +31,14 @@ main{
             }
         }
     }
+    .no-result{
+        padding: 10px 20px 5px;
+        margin: 20px 60px;
+        border: 1px solid @border-grey;
+        border-radius: px;
+        p{
+            text-align: center;
+            color: @dark-grey;
+        }
+    }
 }
