--- a/styles/less/styles.less
+++ b/styles/less/styles.less
@@ -1,13 +1,10 @@
 //Less Utilities
 @import "mixins.less";
 @import "variables.less";
+@import "global.less";
 
 //Styles Modules
 @import "modules/header.less";
 @import "modules/footer.less";
 @import "modules/search.less";
 
-//Global Styles
-body{
-    background-color: @white;
-}
