--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -1,6 +1,7 @@
 //Color Variables
-@black: #000;
+@black: #222323;
 @white: #fff;
 @grey: #eee;
+@dark-grey: #777;
 @border-grey: #9D9D9D;
 @footer-color:@grey;
