--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1,4 +1,8 @@
+body {
+  background-color: #eee;
+}
 .navbar {
+  background-color: #fff;
   margin: 0 2px 20px 4px;
   border: 1px solid #9D9D9D;
 }
@@ -8,13 +12,13 @@
 .navbar button.close {
   margin-top: 22px;
   padding: 2px 6px;
-  border: 2px solid #000;
+  border: 2px solid #222323;
 }
 footer {
   position: fixed;
   bottom: 0;
   min-height: 80px;
-  background-color: #000;
+  background-color: #222323;
   width: 100%;
   color: #eee;
   padding: 20px 0 40px;
@@ -37,8 +41,11 @@ footer .nav-pills > li > a:focus {
   text-decoration: underline;
   background-color: transparent;
 }
+footer .nav-pills li:last-child {
+  border-right-width: 0;
+}
 @media screen and (max-width: 1024px) {
-  .footer .nav-pills {
+  .footer ul.nav-pills {
     float: left;
     margin: 0 auto;
     padding: 40px 2%;
@@ -62,6 +69,27 @@ main .form-inline .right-inner-addon button {
   background-color: transparent;
   border-width: 0;
 }
-body {
-  background-color: #fff;
+main ul {
+  padding-left: 0;
+}
+main ul li {
+  list-style-type: none;
+  margin-top: 20px;
+}
+main ul li a {
+  text-decoration: underline;
+}
+main ul li a:hover,
+main ul li a:focus {
+  text-decoration: none;
+}
+main .no-result {
+  padding: 10px 20px 5px;
+  margin: 20px 60px;
+  border: 1px solid #9D9D9D;
+  border-radius: px;
+}
+main .no-result p {
+  text-align: center;
+  color: #777;
 }
