--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -2,3 +2,38 @@
 body{
     background-color: @grey;
 }
+
+.ng-enter{
+    -webkit-transitionn: 0.75s;
+    -moz-transitionn: 0.75s;
+    -o-transitionn: 0.75s;
+    transition: 0.75s;
+    opacity: 0;
+}
+
+.ng-enter-stagger{
+    -webkit-transition-delay: 0.1s;
+    -moz-transition-delay: 0.1s;
+    -o-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+}
+
+.ng-enter-active{
+    opacity: 1;
+}
+
+.ng-leave{
+    -webkit-transition:0.75s;
+    -moz-transition: 0.75s;
+    -o-transition: 0.75s;
+    transition: 0.75s;
+    opacity: 1
+}
+
+.ng-leave-active{
+    opacity: 0;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
