--- a/styles/less/modules/footer.less
+++ b/styles/less/modules/footer.less
@@ -29,14 +29,16 @@ footer{
     }
 }
 
-@media screen and (max-width: 1024px){
-    .footer {
-        ul.nav-pills{
+
+@media all and (max-width: 699px) {
+    footer {
+        .nav-pills{
             float: left;
             margin: 0 auto;
-            padding: 40px 2%;
             width: 96%;
+            >li{
+                margin: 10px;
+            }
         }
-
     }
 }
